--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "framer-motion": "^7.2.1",
+    "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
